Setup worker service with BullMQ and Redis for background job processing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,13 @@ services:
       - "3000:3000"
     depends_on:
       - server
+
+  worker:
+    build: ./worker
+    container_name: worker
+    depends_on:
+      - redis
+
   
 volumes:
   postgres_data:
